Merged in feature/update-security (pull request #13)
Feature/update security

* remove usless dependency

* update security
add logs
add new role